--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "canvas": "^2.6.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "face-api.js": "^0.22.2"
+    "face-api.js": "^0.22.2",
+    "node-fetch": "^2.6.1"
   }
 }
