--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tensorflow/tfjs-node": "^2.8.6",
     "canvas": "^2.6.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "face-api.js": "^0.22.2",
