--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "face-api.js": "^0.22.2",
+    "mongoose": "^5.12.1",
     "multer": "^1.4.2",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7"
